--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ main > a {
 main a > img {height:100%;}
 
 
-
+/** 이해완료 **/
 .contents {
   width: 100%;
   height:200px;
@@ -104,10 +104,12 @@ main a > img {height:100%;}
 }
 
 
+/** 이해완료 **/
 /*컨텐츠 공통사항*/
 .contents div{width:33.3%;}
 .contents > div:nth-of-type(2){margin:0 10px;}
 
+/** 이해완료 **/
 /*탭메뉴 : 공지사항 갤러리 */
 .tabMenu{ display:flex;}
 
