--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,74 @@
 @charset "utf-8";
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  color: #223222;
+}
+body {
+  background-color: lightgrey;  
+}
+main {
+  width: 1200px;
+  margin: 0 auto;
+  /**! 이걸 써야지 가운데 정렬이 됨 !**/
+}
+header {
+  width: inherit;
+  height: 100px;
+  background-color: lightgoldenrodyellow;
+  /*! 아래 3개는 무조건 써야됨 !*/
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.log0 > img {
+  width: 200px;
+  height: 40px;
+}
+
+.mainmenu {
+  position: relative;
+  width: 800px;
+  height: inherit;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+.mainmenu > a {
+  width: 25%;
+  padding: 20px 0;
+  text-align: center;
+  color: #223222;
+}
+.submenu {
+  background-color: rgb(255, 241, 116);
+  justify-content: space-between;
+  display: flex;
+  position: absolute;
+  top: 100px;
+  width: 800px;
+  right: 0;
+  z-index: 1;
+}
+
+.submenu > ul {
+  width: 25%;
+}
+.submenu > ul > li  {
+  text-align: center;
+  padding: 10px 0;
+}
+.submenu > ul > li:hover {
+  background-color: rgba(255, 255, 0, 0.4);
+}
