--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,15 @@
   color: #223222;
 }
 body {
-  background-color: lightgrey;  
+  background-color: #ffffff;  
 }
 main {
   width: 1200px;
   margin: 0 auto;
   /**! 이걸 써야지 가운데 정렬이 됨 !**/
+}
+a {
+  display: block;
 }
 header {
   width: inherit;
@@ -32,7 +35,7 @@ header {
   align-items: center;
 }
 
-.log0 > img {
+.logo > img {
   width: 200px;
   height: 40px;
 }
@@ -72,3 +75,169 @@ header {
 .submenu > ul > li:hover {
   background-color: rgba(255, 255, 0, 0.4);
 }
+
+.slide {
+  position: relative;
+  width: 1200px;
+  height: 300px;
+  overflow: hidden;
+}
+.slide > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.slide a > img {
+  height: 100%;
+}
+.imgtext{
+  position:absolute;
+  top:40%;
+  left:40%;
+  margin:-10px -70px;
+  background: rgba(0,0,0, 0.7);
+  color:#ffffff;
+  padding:16px 100px;
+  font-weight: bold;
+}
+
+/*! contents !*/
+
+/*컨텐츠*/
+.contents {
+  width: 100%;
+  height:200px;
+  padding:0;
+  margin:10px 0;
+  display:flex;
+  justify-content: space-between;
+  position: relative; /* 탭메뉴의 콘텐츠 영역 absolute 때문에 넣어줌 */
+}
+/*컨텐츠 공통사항*/
+.contents div{width:33.3%;}
+.contents > div:nth-of-type(2){margin:0 10px;}
+
+/*탭메뉴 : 공지사항 갤러리 */
+.tabMenu{ display:flex;}
+.tabMenu>li>a{
+	padding:0 10px;
+	min-width: 85px;
+	line-height:30px;
+	font-size:14px;
+	text-align:center;
+	background:#eeeeee;
+	border:1px solid #dddddd;
+}
+.tabMenu>li>a:hover{ background-color:#eeeeee;}
+
+/* 공지사항과 갤러리 탭 맞닿는 부분에 보더를 없애줌 */
+.tabMenu>li:first-child a{border-right:none;}
+/* 활성화된 탭의 스타일 */
+.tabMenu>li.active>a{ font-weight: bold; background-color:#ffffff;}
+/*탭 콘텐츠 영역 스타일*/
+.tabBG{
+	position:absolute;
+	overflow:hidden;
+	height:168px; /* chrome inspect(검사) 보고 수치 계산 */
+	background:#ffffff;
+}
+ /*active 클래스가 추가된 탭 콘텐츠 영역 스타일*/
+.tabMenu>li.active div{
+	border:1px solid #dddddd;
+	z-index:1;
+}
+ /* 공지사항 */
+.notice ul{ padding:20px 0;}
+.notice ul li{ padding:8px 20px;
+	margin:0 10px;
+  font-size:14px;
+
+}
+/*공지사항 중 2배수 리스트 스타일*/
+.notice li:nth-child(even){ background:rgba(114, 63, 251, 0.1); }
+.notice li:hover{color:#222328;background:rgba(246,182,44, 0.1);}
+.notice li span {float:right;}  /* 날짜 오른쪽 정렬 */
+
+.gallery{	left:0; }
+.gallery ul {
+	display: flex;
+  justify-content: space-around;
+	align-items: center;
+  height:100%;  /*높이 값이 있어야 수직 정렬 됨*/
+}
+.gallery li:hover{ opacity:0.5; }
+
+.banner {
+  position: absolute;
+  left: 450px;
+}
+
+.direct {
+  position: absolute;
+  top: 0px;
+  right: -50px;
+}
+
+footer {
+  position: relative;
+  width: 1200px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgoldenrodyellow;
+}
+
+footer div{display: flex; justify-content: center; align-items: center;}
+/* 하단 공통 */
+footer div{display: flex; justify-content: center; align-items: center;}
+/* 로고 */
+footer div:nth-child(1){width: 20%;}
+/* copyright */
+footer div:nth-child(2){width: 60%; color: #777777;}
+/* SNS */
+footer div:nth-child(3){width: 20%; justify-content: space-around;}
+footer div:nth-child(3) img{border-radius: 50%;}
+
+/* 레이어 팝업  */
+#modalWrap{
+  display:none;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index: 1;
+}
+#modalWrap.active{
+  display:block;
+}
+.modal{
+  position:fixed;
+  width:450px;
+  padding:20px;
+  top:40%;
+  left:40%;
+  background:#ffffff;
+}
+.modal > h1{
+  margin:10px 0;
+  text-align: center;
+}
+.modal > p{
+  text-align:justify;
+}
+.btn{
+  width:100%;
+  padding:10px;
+  margin-top:20px;
+  background: #723ffb;
+  color:#ffffff;
+  border:0;
+  font-weight: bold;
+  cursor:pointer;
+}
+.btn:hover{background:rgba(114, 63, 251, 0.2); color:#723ffb;}
+
+
+
